Fri Jul  6 21:04:37 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * README:

          Fixed incorrect description of the Perl dependency.

Fri Jul  6 19:19:30 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * docs/Configuration_Settings.html:

          Documented the DCPSBitTransportIPAddress setting.

Fri Jul  6 18:06:18 UTC 2007  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/DomainParticipantImpl.cpp:

          Built-In Topic topic for Participant was being stored into wrong
          variable.

        * dds/DCPS/Service_Participant.cpp:
        * dds/DCPS/Service_Participant.h:

          Fixed Built-In Topic transport only using localhost.

          Added new configuration variable "DCPSBitTransportIPAddress"
          to set the ip address (not port) for the Built-In Topic
          transport.

Fri Jul  6 17:33:43 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * README:
        * docs/INSTALL:

          Added more information on which platforms are tested, etc.

Thu Jul  5 22:21:50 UTC 2007  Yan Dai  <dai_y@ociweb.com>

        These changes intended to fix the bugs and work around limitations
        observered during sub_init_loop test debugging.

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.cpp:

          Updated logging message to provide more detail infos.

        * dds/DCPS/WriteDataContainer.cpp:

          Added locking in unregister_all function to access the sending_data_
          list since the function may be called from the thread calling
          delete_datawriter which does not hold the lock in advance.

        * dds/DCPS/transport/framework/DataLinkSet.inl:
        * dds/DCPS/transport/framework/DataLinkSet.cpp:

          Made the send_start() and remove_links() also acquire the
          lock in the provided DataLinkSet. This would fix the access
          violation when send_start is using the link while the link
          is removed from the DataLinkSet.
