@@ -62,6 +62,9 @@ ZeroCopyDataSeq<Sample_T, DEF_MAX>::ZeroCopyDataSeq(
 }
 
 
+#if defined (_MSC_VER) && (_MSC_VER >= 1400)
+#pragma warning (disable:4996) //std::copy OK here
+#endif
 template <class Sample_T, size_t DEF_MAX>
 void
 ZeroCopyDataSeq<Sample_T, DEF_MAX>::length(CORBA::ULong length)
@@ -123,6 +126,9 @@ ZeroCopyDataSeq<Sample_T, DEF_MAX>::length(CORBA::ULong length)
         }
     }
 }
+#if defined (_MSC_VER) && (_MSC_VER >= 1400)
+#pragma warning (default:4996)
+#endif
 
 
 template <class Sample_T, size_t DEF_MAX>
